v0.5-1  (202?-??-??; not yet released)

  o patterns for days in 'guess_datetime' are relaxed:
    in some cases a single digit will be recognised

  o ....

v0.5-0  (2021-04-01)

  o fixed: argument 'tz' had been ignored by 'guess_datetime'

  o 'guess_datetime' gets an argument 'try.patterns' that
    lets the user specify additionals patterns

  o new functions 'hour' 'minute', and 'second', which
    work just as 'year' etc.

  o convert_date: support for PSPP/SPSS dates and times;
    based on a patch by J\"org Beyer

  o 'tznames' has been updated and no longer contains
    duplicates

v0.4-0  (2020-03-25)

  o guess_datetime: the function now supports the date
    pattern "YYYYMMDD"; it also gains arguments
    'date.only', 'within' and 'tz'

  o the package now contains vectors 'month.name.de'
    and 'month.abb.de.din1355.1', which provide German
    month names and their abbreviations

  o the package now contains a data.frame 'tznames',
    which provides a mapping between Olson and Windows
    timezone names

v0.3-0  (2019-03-21)

  o new function 'end_of_quarter'

  o nth_day: argument 'period' may now also be a month
    name. Arguments 'timestamps', 'start' and 'end' may
    be simple years, such as "2000". For start/end,
    they will be interpreted as 1 Jan/31 Dec of that
    year.

v0.2-12  (2018-02-28)

  o nth_day: argument 'n' may be of length greater than 1

v0.2-11  (2018-02-05)

  o timegrid: argument 'excludeWeekends' was renamed
    to 'exclude.weekends' (for consistency with
    other functions, such as PMwR::plot_trading_hours)

  o nth_day: argument 'period' may now also be
    "week" or "year"; argument 'n' may now also be
    numeric

v0.2-10  (2018-01-26)

  o nth_day: argument 'period' may be numeric

v0.2-9  (2018-01-05)

  o new functions 'year', 'month' and 'nth_day'

v0.2-8  (2017-10-11)

  o minor change in example for 'timegrid' to avoid
    error on Solaris

v0.2-7  (2017-08-25)
