@@ -1,7 +1,13 @@
 v0.5-1  (202?-??-??; not yet released)
 
+  o fixed: functions 'hour' 'minute', and 'second',
+    which had been added in v0.5-0, are now exported
+
   o patterns for days in 'guess_datetime' are relaxed:
     in some cases a single digit will be recognised
+
+  o 'convert_date' gains a new type "excel1904" for
+    Excel files that use origin 1904-01-01
 
   o ....
 
